
  - Column.copy() takes along the "unique" attribute
    among others, fixes [ticket:1829] regarding declarative
    mixins

- mysql
  - MySQL dialect doesn't emit CAST() for MySQL version 
    detected < 4.0.2.  This allows the unicode
    check on connect to proceed. [ticket:1826]
    
- firebird
  - Fixed incorrect signature in do_execute(), error 
    introduced in 0.6.1. [ticket:1823]

- documentation
  - Added documentation for the Inspector. [ticket:1820]
  
0.6.1
=====
- orm
  - Fixed regression introduced in 0.6.0 involving improper
    history accounting on mutable attributes.  [ticket:1782]
  
  - Fixed regression introduced in 0.6.0 unit of work refactor
    that broke updates for bi-directional relationship()
    with post_update=True. [ticket:1807]
    
  - session.merge() will not expire attributes on the returned
    instance if that instance is "pending".  [ticket:1789]

  - fixed __setstate__ method of CollectionAdapter to not
    fail during deserialize where parent InstanceState not
    yet unserialized.  [ticket:1802]

  - Added internal warning in case an instance without a 
    full PK happened to be expired and then was asked
    to refresh. [ticket:1797]

  - Added more aggressive caching to the mapper's usage of
    UPDATE, INSERT, and DELETE expressions.  Assuming the 
    statement has no per-object SQL expressions attached,
    the expression objects are cached by the mapper after 
    the first create, and their compiled form is stored
    persistently in a cache dictionary for the duration of
    the related Engine.  The cache is an LRUCache for the
    rare case that a mapper receives an extremely
    high number of different column patterns as UPDATEs.
    
- sql
  - expr.in_() now accepts a text() construct as the argument.
    Grouping parenthesis are added automatically, i.e. usage
    is like `col.in_(text("select id from table"))`.
    [ticket:1793]

  - Columns of _Binary type (i.e. LargeBinary, BLOB, etc.)